# filmgraph

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01eeee95977e_baseline_initial_phase_1_schema.py  9a09a3392b92_add_customers_creditcards_orders_sales_.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: movies.py  stars.py
backend/app/db/: engine.py
backend/app/schemas/: __init__.py  movie.py  star.py
backend/app/services/: movies_service.py  stars_service.py
backend/db/: createtable.sql
deploy/: filmgraph-api.service
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: MovieList.tsx  SingleMovie.tsx  SingleStar.tsx
