[project]
name = "filmgraph-backend"
version = "0.1.0"
description = "FilmGraph movie catalog API (FastAPI + MySQL)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pymysql",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
